--- a/index.html
+++ b/index.html
@@ -10,25 +10,25 @@
   
   <title>DTA-INICIO</title>
   
-  <link rel="shortcut icon" type="image/x-icon" href="/assets/faviconV2.ico">
+  <link rel="shortcut icon" type="image/x-icon" href="assets/faviconV2.ico">
   
-  <link rel="stylesheet" type="text/css" href="../assets/css/themify-icons.css">
+  <link rel="stylesheet" type="text/css" href="assets/css/themify-icons.css">
   
-  <link rel="stylesheet" type="text/css" href="../assets/css/bootstrap.css">
+  <link rel="stylesheet" type="text/css" href="assets/css/bootstrap.css">
 
-  <link rel="stylesheet" type="text/css" href="../assets/vendor/animate/animate.css">
+  <link rel="stylesheet" type="text/css" href="assets/vendor/animate/animate.css">
   
-  <link rel="stylesheet" type="text/css" href="../assets/vendor/owl-carousel/owl.carousel.css">
+  <link rel="stylesheet" type="text/css" href="assets/vendor/owl-carousel/owl.carousel.css">
   
-  <link rel="stylesheet" type="text/css" href="../assets/vendor/perfect-scrollbar/css/perfect-scrollbar.css">
+  <link rel="stylesheet" type="text/css" href="assets/vendor/perfect-scrollbar/css/perfect-scrollbar.css">
   
-  <link rel="stylesheet" type="text/css" href="../assets/vendor/nice-select/css/nice-select.css">
+  <link rel="stylesheet" type="text/css" href="assets/vendor/nice-select/css/nice-select.css">
 
-  <link rel="stylesheet" type="text/css" href="../assets/vendor/fancybox/css/jquery.fancybox.min.css">
+  <link rel="stylesheet" type="text/css" href="assets/vendor/fancybox/css/jquery.fancybox.min.css">
   
-  <link rel="stylesheet" type="text/css" href="../assets/css/virtual.css">
+  <link rel="stylesheet" type="text/css" href="assets/css/virtual.css">
   
-  <link rel="stylesheet" type="text/css" href="../assets/css/minibar.virtual.css">
+  <link rel="stylesheet" type="text/css" href="assets/css/minibar.virtual.css">
 </head>
 <body class="theme-red">
   
@@ -74,7 +74,7 @@
   
   <div class="topbar-nav fixed-top">
     <div class="brand">
-      <img src="/assets/faviconV2.ico" alt="" width="100" height="100">
+      <img src="assets/faviconV2.ico" alt="" width="100" height="100">
     </div>
     <h3 class="ml-1">Gram</h3>
     <button class="btn-fab toggle-menu mr-3"><span class="ti-menu"></span></button>
@@ -124,7 +124,7 @@
   </div>
   
   <div class="vg-main-wrapper">
-    <div class="vg-page page-home" id="home" style="background-image: url(../assets/img/bg_image_2.jpg);">
+    <div class="vg-page page-home" id="home" style="background-image: url(assets/img/bg_image_2.jpg);">
       <div class="caption wow zoomInUp">
         <h1 class="fw-normal">Bienvenido a</h1>
         <h2 class="fw-medium fg-theme">DE TODO EN ALAMBRE</h2>
@@ -139,7 +139,7 @@
         <div class="row">
           <div class="col-md-6">
             <div class="img-place wow zoomIn">
-              <img src="../assets/img/person.jpg" alt="Photo Profile">
+              <img src="assets/img/person.jpg" alt="Photo Profile">
             </div>
           </div>
           <div class="col-md-6">
