--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
 
         <div class="gridder my-3">
           <div class="grid-item Exhibidores wow zoomIn">
-            <div class="img-place" data-src="assets/img/work/Exhibidores/retail1.jpg" data-fancybox data-caption="<h5 class='fg-theme'>Gaming Dashboard</h5> <p>Games, Streaming</p>">
+            <div class="img-place" data-src="../assets/img/work/Exhibidores/retail1.jpg" data-fancybox data-caption="<h5 class='fg-theme'>Gaming Dashboard</h5> <p>Games, Streaming</p>">
               <img src="/assets/img/work/Exhibidores/retail1.jpg" alt="">
               <div class="img-caption">
                 <h5 class="fg-theme">Exhibidor con ganchos</h5>
