--- a/index.html
+++ b/index.html
@@ -230,9 +230,9 @@
           <button class="btn btn-theme-outline" data-filter=".Especializado">Especializado</button>
         </div>
 
-        <div class="gridder my-3">
+               <div class="gridder my-3">
           <div class="grid-item Exhibidores wow zoomIn">
-            <div class="img-place" data-src="../assets/img/work/Exhibidores/retail1.jpg" data-fancybox data-caption="<h5 class='fg-theme'>Gaming Dashboard</h5> <p>Games, Streaming</p>">
+            <div class="img-place" data-src="/assets/img/work/Exhibidores/retail1.jpg" data-fancybox data-caption="<h5 class='fg-theme'>Exhibidor con ganchos </h5> <p>Exhibidores</p>">
               <img src="/assets/img/work/Exhibidores/retail1.jpg" alt="">
               <div class="img-caption">
                 <h5 class="fg-theme">Exhibidor con ganchos</h5>
@@ -241,7 +241,7 @@
             </div>
           </div>
           <div class="grid-item Exhibidores wow zoomIn">
-            <div class="img-place" data-src="assets/img/work/Exhibidores/retail2.jpg" data-fancybox data-caption="<h5 class='fg-theme'>Mobile Travel App</h5> <p>Electrodomesticos</p>">
+            <div class="img-place" data-src="/assets/img/work/Exhibidores/retail2.jpg" data-fancybox data-caption="<h5 class='fg-theme'>Exhibidor de pan</h5> <p>Exhibidores/p>">
               <img src="/assets/img/work/Exhibidores/retail2.jpg" alt="">
               <div class="img-caption">
                 <h5 class="fg-theme">Exhibidor de pan</h5>
@@ -250,7 +250,7 @@
             </div>
           </div>
           <div class="grid-item Exhibidores wow zoomIn">
-            <div class="img-place" data-src="assets/img/work/Exhibidores/retail3.jpg" data-fancybox data-caption="<h5 class='fg-theme'>Music App</h5> <p>Musics</p>">
+            <div class="img-place" data-src="/assets/img/work/Exhibidores/retail3.jpg" data-fancybox data-caption="<h5 class='fg-theme'>Exhibidor para botanas</h5> <p>Exhibidores</p>">
               <img src="/assets/img/work/Exhibidores/retail3.jpg" alt="">
               <div class="img-caption">
                 <h5 class="fg-theme">Exhibidor para botanas</h5>
@@ -259,7 +259,7 @@
             </div>
           </div>
           <div class="grid-item Exhibidores wow zoomIn">
-            <div class="img-place" data-src="assets/img/work/Exhibidores/retail4.jpg" data-fancybox data-caption="<h5 class='fg-theme'>Gaming Dashboard</h5> <p>Games, Streaming</p>">
+            <div class="img-place" data-src="/assets/img/work/Exhibidores/retail4.jpg" data-fancybox data-caption="<h5 class='fg-theme'>Rack para bebidas</h5> <p>Exhibidores</p>">
               <img src="/assets/img/work/Exhibidores/retail4.jpg" alt="">
               <div class="img-caption">
                 <h5 class="fg-theme">Rack para bebidas</h5>
@@ -268,7 +268,7 @@
             </div>
           </div>
           <div class="grid-item Exhibidores wow zoomIn">
-            <div class="img-place" data-src="assets/img/work/Exhibidores/retail5" data-fancybox data-caption="<h5 class='fg-theme'>Drugs Delivery App</h5> <p>Health, Drugs</p>">
+            <div class="img-place" data-src="/assets/img/work/Exhibidores/retail5" data-fancybox data-caption="<h5 class='fg-theme'>Exhibidor genérico</h5> <p>Exhibidores</p>">
               <img src="/assets/img/work/Exhibidores/retail5.jpg" alt="">
               <div class="img-caption">
                 <h5 class="fg-theme">Exhibidor genérico</h5>
@@ -277,7 +277,7 @@
             </div>
           </div>
           <div class="grid-item Exhibidores wow zoomIn">
-            <div class="img-place" data-src="assets/img/work/Exhibidores/retail6.jpg" data-fancybox data-caption="<h5 class='fg-theme'>Mobile Travel App</h5> <p>Electrodomesticos</p>">
+            <div class="img-place" data-src="/assets/img/work/Exhibidores/retail6.jpg" data-fancybox data-caption="<h5 class='fg-theme'>Display para sodas</h5> <p>Exhibidores</p>">
               <img src="/assets/img/work/Exhibidores/retail6.jpg" alt="">
               <div class="img-caption">
                 <h5 class="fg-theme">Display para sodas</h5>
@@ -286,7 +286,7 @@
             </div>
           </div>
           <div class="grid-item Especializado Exhibidores wow zoomIn">
-            <div class="img-place" data-src="assets/img/work/Especializado/specialized4.jpg" data-fancybox data-caption="<h5 class='fg-theme'>Music App</h5> <p>Musics</p>">
+            <div class="img-place" data-src="/assets/img/work/Especializado/specialized4.jpg" data-fancybox data-caption="<h5 class='fg-theme'>Gancho con porta precio</h5> <p>Especializado, Exhibidores</p>">
               <img src="/assets/img/work/Especializado/specialized4.jpg" alt="">
               <div class="img-caption">
                 <h5 class="fg-theme">Gancho con porta precio</h5>
@@ -295,7 +295,7 @@
             </div>
           </div>
           <div class="grid-item Exhibidores Especializado wow zoomIn">
-            <div class="img-place" data-src="assets/img/work/Especializado/specialized6.jpg" data-fancybox data-caption="<h5 class='fg-theme'>Gaming Dashboard</h5> <p>Games, Streaming</p>">
+            <div class="img-place" data-src="/assets/img/work/Especializado/specialized6.jpg" data-fancybox data-caption="<h5 class='fg-theme'>Exhibidor para frascos</h5> <p>Exhibidores, Especializado</p>">
               <img src="/assets/img/work/Especializado/specialized6.jpg" alt="">
               <div class="img-caption">
                 <h5 class="fg-theme">Exhibidor para frascos</h5>
@@ -304,7 +304,7 @@
             </div>
           </div>
           <div class="grid-item Exhibidores Electrodomesticos wow zoomIn">
-            <div class="img-place" data-src="assets/img/work/Electrodomesticos/residential7.jpg" data-fancybox data-caption="<h5 class='fg-theme'>Drugs Delivery App</h5> <p>Health, Drugs</p>">
+            <div class="img-place" data-src="/assets/img/work/Electrodomesticos/residential7.jpg" data-fancybox data-caption="<h5 class='fg-theme'>Porta papel higiénico</h5> <p>Exhibidores, Especializado</p>">
               <img src="/assets/img/work/Electrodomesticos/residential7.jpg" alt="">
               <div class="img-caption">
                 <h5 class="fg-theme">Porta papel higiénico</h5>
@@ -313,7 +313,7 @@
             </div>
           </div>
           <div class="grid-item Electrodomesticos Exhibidores wow zoomIn">
-            <div class="img-place" data-src="assets/img/work/Electrodomesticos/residential6.jpg" data-fancybox data-caption="<h5 class='fg-theme'>Mobile Travel App</h5> <p>Electrodomesticos</p>">
+            <div class="img-place" data-src="/assets/img/work/Electrodomesticos/residential6.jpg" data-fancybox data-caption="<h5 class='fg-theme'>Base circular</h5> <p>Electrodomesticos, Exhibidores</p>">
               <img src="/assets/img/work/Electrodomesticos/residential6.jpg" alt="">
               <div class="img-caption">
                 <h5 class="fg-theme">Base circular</h5>
@@ -322,7 +322,7 @@
             </div>
           </div>
           <div class="grid-item Electrodomesticos wow zoomIn">
-            <div class="img-place" data-src="assets/img/work/Electrodomesticos/residential1.jpg" data-fancybox data-caption="<h5 class='fg-theme'>Music App</h5> <p>Musics</p>">
+            <div class="img-place" data-src="/assets/img/work/Electrodomesticos/residential1.jpg" data-fancybox data-caption="<h5 class='fg-theme'>Parrilla para estufa</h5> <p>Electrodomesticos</p>">
               <img src="/assets/img/work/Electrodomesticos/residential1.jpg" alt="">
               <div class="img-caption">
                 <h5 class="fg-theme">Parrilla para estufa</h5>
@@ -331,7 +331,7 @@
             </div>
           </div>
           <div class="grid-item Electrodomesticos wow zoomIn">
-            <div class="img-place" data-src="assets/img/work/Electrodomesticos/residential3.jpg" data-fancybox data-caption="<h5 class='fg-theme'>Gaming Dashboard</h5> <p>Games, Streaming</p>">
+            <div class="img-place" data-src="/assets/img/work/Electrodomesticos/residential3.jpg" data-fancybox data-caption="<h5 class='fg-theme'>Rack para horno</h5> <p>Electrodomesticos</p>">
               <img src="/assets/img/work/Electrodomesticos/residential3.jpg" alt="">
               <div class="img-caption">
                 <h5 class="fg-theme">Rack para horno</h5>
@@ -340,7 +340,7 @@
             </div>
           </div>
           <div class="grid-item Electrodomesticos wow zoomIn">
-            <div class="img-place" data-src="assets/img/work/Electrodomesticos/residential4.jpg" data-fancybox data-caption="<h5 class='fg-theme'>Drugs Delivery App</h5> <p>Health, Drugs</p>">
+            <div class="img-place" data-src="/assets/img/work/Electrodomesticos/residential4.jpg" data-fancybox data-caption="<h5 class='fg-theme'>Parrilla para horno</h5> <p>Electrodomesticos</p>">
               <img src="/assets/img/work/Electrodomesticos/residential4.jpg" alt="">
               <div class="img-caption">
                 <h5 class="fg-theme">Parrilla para horno</h5>
@@ -349,7 +349,7 @@
             </div>
           </div>
           <div class="grid-item Electrodomesticos wow zoomIn">
-            <div class="img-place" data-src="assets/img/work/Electrodomesticos/residential5.jpg" data-fancybox data-caption="<h5 class='fg-theme'>Mobile Travel App</h5> <p>Electrodomesticos</p>">
+            <div class="img-place" data-src="/assets/img/work/Electrodomesticos/residential5.jpg" data-fancybox data-caption="<h5 class='fg-theme'>Parrilla para estufa</h5> <p>Electrodomesticos</p>">
               <img src="/assets/img/work/Electrodomesticos/residential5.jpg" alt="">
               <div class="img-caption">
                 <h5 class="fg-theme">Parrilla para estufa</h5>
@@ -358,7 +358,7 @@
             </div>
           </div>
           <div class="grid-item Automotriz wow zoomIn">
-            <div class="img-place" data-src="assets/img/work/automotrices/auto1.jpg" data-fancybox data-caption="<h5 class='fg-theme'>Music App</h5> <p>Musics</p>">
+            <div class="img-place" data-src="/assets/img/work/automotrices/auto1.jpg" data-fancybox data-caption="<h5 class='fg-theme'>Protección de ventanas automotrices</h5> <p>Automotriz</p>">
               <img src="/assets/img/work/automotrices/auto1.jpg" alt="">
               <div class="img-caption">
                 <h5 class="fg-theme">Protección de ventanas automotrices</h5>
@@ -367,7 +367,7 @@
             </div>
           </div>
           <div class="grid-item Automotriz wow zoomIn">
-            <div class="img-place" data-src="assets/img/work/automotrices/auto2.jpg" data-fancybox data-caption="<h5 class='fg-theme'>Music App</h5> <p>Musics</p>">
+            <div class="img-place" data-src="/assets/img/work/automotrices/auto2.jpg" data-fancybox data-caption="<h5 class='fg-theme'>Protección de ventanas automotrices</h5> <p>Automotriz</p>">
               <img src="/assets/img/work/automotrices/auto2.jpg" alt="">
               <div class="img-caption">
                 <h5 class="fg-theme">Protección de ventanas automotrices</h5>
@@ -376,7 +376,7 @@
             </div>
           </div>
           <div class="grid-item Automotriz wow zoomIn">
-            <div class="img-place" data-src="assets/img/work/automotrices/auto3.jpg" data-fancybox data-caption="<h5 class='fg-theme'>Music App</h5> <p>Musics</p>">
+            <div class="img-place" data-src="/assets/img/work/automotrices/auto3.jpg" data-fancybox data-caption="<h5 class='fg-theme'>Protección de ventanas automotrices</h5> <p>Automotriz</p>">
               <img src="/assets/img/work/automotrices/auto3.jpg" alt="">
               <div class="img-caption">
                 <h5 class="fg-theme">Protección de ventanas automotrices</h5>
@@ -385,7 +385,7 @@
             </div>
           </div>
           <div class="grid-item Automotriz wow zoomIn">
-            <div class="img-place" data-src="assets/img/work/automotrices/auto4.jpg" data-fancybox data-caption="<h5 class='fg-theme'>Music App</h5> <p>Musics</p>">
+            <div class="img-place" data-src="/assets/img/work/automotrices/auto4.jpg" data-fancybox data-caption="<h5 class='fg-theme'>Protección de ventanas automotrices</h5> <p>Automotriz</p>">
               <img src="/assets/img/work/automotrices/auto4.jpg" alt="">
               <div class="img-caption">
                 <h5 class="fg-theme">Protección de ventanas automotrices</h5>
@@ -394,7 +394,7 @@
             </div>
           </div>
           <div class="grid-item Automotriz wow zoomIn">
-            <div class="img-place" data-src="assets/img/work/automotrices/auto5.jpg" data-fancybox data-caption="<h5 class='fg-theme'>Music App</h5> <p>Musics</p>">
+            <div class="img-place" data-src="/assets/img/work/automotrices/auto5.jpg" data-fancybox data-caption="<h5 class='fg-theme'>Protección de ventanas automotrices</h5> <p>Automotriz</p>">
               <img src="/assets/img/work/automotrices/auto5.jpg" alt="">
               <div class="img-caption">
                 <h5 class="fg-theme">Protección de ventanas automotrices</h5>
@@ -403,7 +403,7 @@
             </div>
           </div>
           <div class="grid-item Automotriz wow zoomIn">
-            <div class="img-place" data-src="assets/img/work/automotrices/auto6.jpg" data-fancybox data-caption="<h5 class='fg-theme'>Music App</h5> <p>Musics</p>">
+            <div class="img-place" data-src="/assets/img/work/automotrices/auto6.jpg" data-fancybox data-caption="<h5 class='fg-theme'>Protección de ventanas automotrices</h5> <p>Automotriz</p>">
               <img src="/assets/img/work/automotrices/auto6.jpg" alt="">
               <div class="img-caption">
                 <h5 class="fg-theme">Protección de ventanas automotrices</h5>
@@ -412,7 +412,7 @@
             </div>
           </div>
           <div class="grid-item Especializado wow zoomIn">
-            <div class="img-place" data-src="assets/img/work/Especializado/specialized7.jpg" data-fancybox data-caption="<h5 class='fg-theme'>Music App</h5> <p>Musics</p>">
+            <div class="img-place" data-src="/assets/img/work/Especializado/specialized7.jpg" data-fancybox data-caption="<h5 class='fg-theme'>Jaulas</h5> <p>Especializados</p>">
               <img src="/assets/img/work/Especializado/specialized7.jpg" alt="">
               <div class="img-caption">
                 <h5 class="fg-theme">Jaulas</h5>
@@ -421,7 +421,7 @@
             </div>
           </div>
           <div class="grid-item Especializado wow zoomIn">
-            <div class="img-place" data-src="assets/img/work/Especializado/specialized7.jpg" data-fancybox data-caption="<h5 class='fg-theme'>Music App</h5> <p>Musics</p>">
+            <div class="img-place" data-src="/assets/img/work/Especializado/specialized8.jpg" data-fancybox data-caption="<h5 class='fg-theme'>Protección de puerta</h5> <p>Especializados</p>">
               <img src="/assets/img/work/Especializado/specialized8.jpg" alt="">
               <div class="img-caption">
                 <h5 class="fg-theme">Protección de puerta</h5>
@@ -430,7 +430,7 @@
             </div>
           </div>
           <div class="grid-item Especializado wow zoomIn">
-            <div class="img-place" data-src="assets/img/work/Especializado/specialized7.jpg" data-fancybox data-caption="<h5 class='fg-theme'>Music App</h5> <p>Musics</p>">
+            <div class="img-place" data-src="/assets/img/work/Especializado/specialized9.jpg" data-fancybox data-caption="<h5 class='fg-theme'>Guarda perimetral</h5> <p>Especializados</p>">
               <img src="/assets/img/work/Especializado/specialized9.jpg" alt="">
               <div class="img-caption">
                 <h5 class="fg-theme">Guarda perimetral</h5>
@@ -439,7 +439,7 @@
             </div>
           </div>
           <div class="grid-item Especializado wow zoomIn">
-            <div class="img-place" data-src="assets/img/work/Especializado/specialized5.jpg" data-fancybox data-caption="<h5 class='fg-theme'>Music App</h5> <p>Musics</p>">
+            <div class="img-place" data-src="/assets/img/work/Especializado/specialized5.jpg" data-fancybox data-caption="<h5 class='fg-theme'>Gancho especial</h5> <p>Especializados/p>">
               <img src="/assets/img/work/Especializado/specialized5.jpg" alt="">
               <div class="img-caption">
                 <h5 class="fg-theme">Gancho especial</h5>
