--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   
-  <meta name="copyright" content="MACode ID, https://www.macodeid.com/">
+  <meta name="copyright" content="DTA, Refugio Muñoz">
   
   <title>DTA-INICIO</title>
   
@@ -487,7 +487,7 @@
     
     <!-- Footer -->
     <div class="vg-footer">
-      <h1 class="text-center"><img src="assets/img/logo-dta.png" alt=""></h1>
+      <h1 class="text-center"><img src="assets/img/logo-dta.png" width="100px" height="30px" alt=""></h1>
       <div class="container">
         <div class="row">
           <div class="col-lg-4 py-3">
